<resources>
    <string name="app_name">Team Sorter</string>

    <string name="hello_world"> interface</string>
    <string name="action_settings">Settings</string>
    <string name="sorter_title">Sort Teams</string>
    <string name="title_activity_sorter">Sort Your Teams</string>
    <string name="interface_simple">Simple</string>
    <string name="interface_advanced">Advanced</string>
    <string name="ft_interface">Interface:</string>
    <string name="no_of_teams">Teams</string>
    <string name="p_to_sort">People to Sort</string>
    <string name="team_names_label">Team names:</string>
    <string name="team_name_label">Team name:</string>
    <string name="team">Team</string>
    <string name="save_button">Save</string>


</resources>
