<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tlid2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ft_interface"
        android:id="@+id/textView"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/optSimple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interface_simple"
            android:checked="true"
            android:textSize="20sp" />
        <RadioButton android:id="@+id/optAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interface_advanced"
            android:checked="false"
            android:layout_marginLeft="35dp"
            android:textSize="20sp" />
    </RadioGroup>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textPeopleToSort"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/p_to_sort"
        android:textSize="20sp"
        android:layout_weight="1"
        />

    <EditText
        android:id="@+id/noOfPeeps"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:text="6"
        android:singleLine="true"
        android:textSize="20sp"
        android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textNoOfTeams"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/no_of_teams"
        android:textSize="20sp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/noOfTeams"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:text="2"
        android:textSize="20sp"
        android:layout_weight="1" />
        </LinearLayout>

    <Button
        android:id="@+id/btnSort"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="Sort"
        android:layout_gravity="right"
        android:onClick="OnClickSort" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_names_label"
        android:id="@+id/teamNames"
        android:textSize="@dimen/abc_text_size_large_material" />

    <ListView
        android:id="@+id/ftListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        >

    </ListView>


</LinearLayout>
